# pace-calculator

./: LICENSE  README.md  pacecalc.py  pacecalc_test.py  pyproject.toml
