[tool.poetry]
name = "pace-calculator"
version = "0.1.0"
description = ""
authors = ["Wartijn"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
